# atx-bandc

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  Procfile  README.md  dev-requirements.in  dev-requirements.txt  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: app.yml  ci.yml
atx_boardscommissions/: .gitignore  Makefile  manage.py  requirements.txt
atx_boardscommissions/boarissions/: settings.py  urls.py  wsgi.py
atx_boardscommissions/scraper/: main.py  tests.py
atx_boardscommissions/scraper/samples/: music.html
bandc/: Makefile  asgi.py  celery.py  context_processors.py  feed.py  find_pages.py  models.py  pdf.py  requirements.txt  scrape.py  settings.py  test_models.py  tests.py  urls.py  wsgi.py
bandc/apps/agenda/: admin.py  apps.py  factories.py  feeds.py  models.py  pdf.py  scrape_logger.py  tasks.py  urls.py  utils.py  views.py
bandc/apps/agenda/management/commands/: populate_list.py  scrape.py  scrape_cron.py  scrape_old.py  scrape_one.py
bandc/apps/agenda/migrations/: 0001_initial.py  0002_auto_20160117_2355.py  0002_auto_20160118_2320.py  0002_auto_20160118_2355.py  0003_auto_20160124_1941.py  0003_bandc_scrapable.py  0004_auto_20160118_0314.py  0004_thumbnail_imagefield.py  0005_auto_20160118_0355.py  0005_document_page_count.py  0006_add_edims_id.py  0006_document_active.py  0007_auto_20160118_0447.py  0007_backfill_edims_id.py  0008_auto_20160118_0528.py  0008_scrapelog.py  0009_alter_scrapelog_duration.py  0009_auto_20160118_1712.py  0010_document_agenda_docu_active_6df265_idx.py  0011_bandc_active.py
bandc/apps/agenda/templates/agenda/: bandc_detail.html  bandc_list.html  document_description.html  document_detail.html  meeting_detail.html  scrapelog_list.html
bandc/apps/agenda/templates/agenda/includes/: document_summary.html  upcoming_meetings.html
bandc/apps/agenda/tests/: Makefile  test_models.py  test_pdf.py  test_scrape_logger.py  test_utils.py
bandc/apps/agenda/tests/samples/: 2016_134_1.htm  boards-and-commissions-information-center.html  music.html  parks.html  parks2.html
bandc/apps/bootstrap_pagination/: __init__.py
bandc/apps/bootstrap_pagination/templatetags/: bootstrap_pagination.py
bandc/feed/: feed.py
bandc/samples/: parks.html
bandc/scraper/: main.py  scrape.py  tests.py
bandc/scraper/samples/: music.html  parks.html  parks2.html
bandc/templates/: base.html  feed.html  home.html
utils/: feed.py  pdf.py  scrape.py  settings.py  test_scrape.py
utils/templates/: base.html  item_description.html
