[project]
name = "atx-bandc"
version = "1.0.0"
description = ""
authors = [{ name = "crccheck", email = "c@crccheck.com" }]
requires-python = ">=3.12"

dependencies = [
  "django",
  "dj-database-url",
  "dj-obj-update",
  "django-extensions",
  "django-object-actions",
  "granian",
  "pillow",
  "lxml",
  "python-dateutil",
  "requests",
  "project-runpy",
  "pdfminer.six==20201018",
  "sh",
  "sentry-sdk[django]",
]

[project.optional-dependencies]
dev = ["daphne", "factory-boy", "mypy", "ruff"]

[tool.setuptools]
packages = ["bandc"]

[tool.ruff]
exclude = ["bandc/apps/bootstrap_pagination"]

[tool.ruff.lint]
extend-select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "G",   # flake8-logging-format
  "I",   # isort
  "N",   # pep8-naming
  "RET", # flakes8-return
  "RUF", # Ruff-specific rules
  "UP",  # pyupgrade
]
ignore = ["RUF012"]
exclude = ["bandc/apps/bootstrap_pagination"]
