[project]
name = "atx-bandc"
version = "1.0.0"
description = ""
authors = [{ name = "crccheck", email = "c@crccheck.com" }]
requires-python = ">=3.14"

dependencies = [
  "django",
  "dj-database-url",
  "dj-obj-update",
  "django-extensions",
  "django-object-actions",
  "granian",
  "pillow",
  "lxml",
  "python-dateutil",
  "requests",
  "project-runpy",
  "pdfminer.six",
  "sh",
  "sentry-sdk[django]",
]

[dependency-groups]
dev = [
    "daphne",
    "factory-boy",
    "mypy",
    "ruff",
    "types-python-dateutil>=2.9.0.20260124",
    "types-requests>=2.32.4.20260107",
]

[tool.setuptools]
packages = ["bandc"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["migrations/"]

[tool.ruff]
exclude = ["bandc/apps/bootstrap_pagination"]

[tool.ruff.lint]
extend-select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "G",   # flake8-logging-format
  "I",   # isort
  "N",   # pep8-naming
  "RET", # flakes8-return
  "RUF", # Ruff-specific rules
  "UP",  # pyupgrade
]
ignore = ["RUF012"]
exclude = ["bandc/apps/bootstrap_pagination"]
